--- a/src/index.css
+++ b/src/index.css
@@ -96,13 +96,19 @@ a {
 
 }
 
+
 .hero {
-  width: 100%
+  width: 100%;
+	display: flex;
+	justify-content: center;
 }
 
 .landingphoto {
-  height: 1000px;
-  width: 100%;
+  height: 700px;
+  width: 1500px;
+	border-radius: 40px;
+	margin-bottom: 20px;
+	padding-top: 20px;
 }
 
 @media screen and (width <= 700px) {
@@ -115,6 +121,8 @@ a {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
   gap: 2rem;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 .img-container {
@@ -133,7 +141,7 @@ a {
 	text-shadow: 0 0 1.5rem black;
 	font-family: "Yellowtail";
   text-align: center; /* To center the text horizontally */
-  width: 30%; /* Optionally, make the text container the full width of the image */
+  width: 100%; /* Optionally, make the text container the full width of the image */
 }
 
 .photo {
