--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,11 @@ a {
 
 
 .header {
+	position: fixed;
+ 	top: 0;
+	width: 100%;
+	opacity: 1;
+	z-index: 5;
 	padding-top: .5em;
 	padding-bottom: .5em;
 	border: 1px solid #a2a2a2;
@@ -160,7 +165,7 @@ a {
   transition: opacity 800ms, transform 600ms;
   &:hover {
     transform: scale(1.3);
-		z-index: 2;
+		z-index: 100;
     opacity: 1;
     transition: transform 600ms, opacity 2000ms;
   }
