--- a/src/index.css
+++ b/src/index.css
@@ -130,16 +130,28 @@ a {
   }
 }
 
-.photogrid{
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
-  gap: 2rem;
-	padding-left: 20px;
-	padding-right: 20px;
+.photogrid {
+	display: inline-flex;
+	flex-wrap: wrap;
+	gap: 10px;
 }
 
 .img-container {
-	position: relative;
+	height: 50vh;
+	flex-grow: 1;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+.photo {
+	max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
+}
+
+.photo:last-child {
+	flex-grow: 100px;
 }
 
 .album-text {
@@ -161,13 +173,6 @@ a {
 	transition: transform 600ms;
 }
 
-.photo {
-	border-radius: 40px;
-	position: relative;
-  opacity: 0.9;
-  width: 100%;
-  height: 600px;
-}
 
 .photo:hover {
   transform: scale(1.4);
