--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,7 @@ a {
 }
 
 .photo {
+	border-radius: 30px;
 	max-height: 100%;
   min-width: 100%;
   vertical-align: bottom;
@@ -183,12 +184,15 @@ a {
 @media screen and (width <= 700px) {
   .img-container {
 		width: 100vw;
+		margin-left: 0px;
+		margin-right: 0px;
   }
 	.photogrid {
 		padding-left: 0px;
 		padding-right: 0px;
 	}
 	.photo {
+		border-radius: 0px;
 		opacity: 1;
 		&:hover {
 			transform: scale(1);
