--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,52 @@ a {
   }
 }
 
+.album-photogrid{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  gap: 2rem;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.album-img-container {
+	position: relative;
+}
+
+.album-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  font-size: 80px;
+	color: #fff;
+	text-shadow: 0 0 1.5rem black;
+	font-family: "Yellowtail";
+  text-align: center; /* To center the text horizontally */
+  width: 100%; /* Optionally, make the text container the full width of the image */
+}
+
+.album-text:hover + .photo {
+  transform: scale(1.4);
+	transition: transform 600ms;
+}
+
+.album-photo {
+	border-radius: 40px;
+	position: relative;
+  opacity: 0.9;
+  width: 100%;
+  height: 600px;
+}
+
+.album-photo:hover {
+  transform: scale(1.4);
+	opacity: 1;
+  transition: transform 600ms, opacity 1000ms;
+	z-index: 2;
+}
+
 .photogrid {
 	display: inline-flex;
 	flex-wrap: wrap;
@@ -192,6 +238,22 @@ a {
 		padding-right: 0px;
 	}
 	.photo {
+		border-radius: 0px;
+		opacity: 1;
+		&:hover {
+			transform: scale(1);
+	  }
+	}
+	.album-img-container {
+		width: 100vw;
+		margin-left: 0px;
+		margin-right: 0px;
+  }
+	.album-photogrid {
+		padding-left: 0px;
+		padding-right: 0px;
+	}
+	.album-photo {
 		border-radius: 0px;
 		opacity: 1;
 		&:hover {
