--- a/src/index.css
+++ b/src/index.css
@@ -167,12 +167,12 @@ a {
   opacity: 0.9;
   width: 100%;
   height: 600px;
+	transition: transform 600ms ease-in-out, opacity 1000ms ease-in-out;
 }
 
 .album-photo:hover {
   transform: scale(1.4);
 	opacity: 1;
-  transition: transform 600ms, opacity 1000ms;
 	z-index: 2;
 }
 
@@ -194,6 +194,7 @@ a {
 	max-height: 100%;
   min-width: 100%;
   vertical-align: bottom;
+	transition: transform 600ms ease-in-out, opacity 1000ms ease-in-out;
 }
 
 .photo:last-child {
@@ -223,7 +224,6 @@ a {
 .photo:hover {
   transform: scale(1.4);
 	opacity: 1;
-  transition: transform 600ms, opacity 1000ms;
 	z-index: 2;
 }
 
