--- a/src/index.css
+++ b/src/index.css
@@ -26,40 +26,17 @@ a {
 	text-decoration: none;
 }
 
-
-
 .logo {
-	margin: 0;
 	font-size: 1.45em;
 }
 
-.main-nav {
-	margin-top: 5px;
-}
-
-.logo a,
-.main-nav a {
-	padding: 10px 15px;
-	text-transform: uppercase;
-	text-align: center;
-	display: block;
-}
-
-.main-nav a {
-	color: #34495e;
-	font-size: .99em;
-}
-
-.main-nav a:hover {
-	color: #718daa;
-}
-
-
-
-.header {
-	position: fixed;
- 	top: 0;
-	width: 100%;
+nav {
+  width: 100%;
+  padding-left: 30px;
+  padding-right: 10px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	opacity: 1;
 	z-index: 5;
 	padding-top: .5em;
@@ -72,6 +49,27 @@ a {
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
+}
+
+.nav-links {
+  list-style: none;
+	display: flex;
+}
+
+.nav-item a {
+  display: inline-block;
+  padding: 10px 15px;
+  text-decoration: none;
+  color: black;
+	font-size: 1.45em;
+}
+
+.nav-item:hover {
+  background-color: white;
+}
+
+.nav-item:hover a {
+  color: darkgreen;
 }
 
 
