--- a/src/index.css
+++ b/src/index.css
@@ -235,6 +235,12 @@ nav {
 	z-index: 2;
 }
 
+@media screen and (width <= 950px) {
+	.map {
+		margin-top: 50px;
+	}
+}
+
 @media screen and (width <= 800px) {
 	.landingphoto {
 		height: 33vh;
