--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ nav {
 .nav-links {
   list-style: none;
 	display: flex;
+	flex-wrap: wrap;
 }
 
 .nav-item a {
@@ -237,7 +238,7 @@ nav {
 
 @media screen and (width <= 950px) {
 	.map {
-		margin-top: 50px;
+		margin-top: 200px;
 	}
 }
 
