--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,14 @@ nav {
  display: block;
 }
 
+.loader {
+	position: fixed;
+  top: 20%;
+  left: 36%;
+	z-index: 2;
+}
+
+
 /* =================================
   Media Queries
 ==================================== */
@@ -265,6 +273,12 @@ nav {
 	}
 	.hero {
 		margin-top: 120px;
+	}
+	.loader {
+		position: fixed;
+	  top: 23%;
+	  left: 15%;
+		z-index: 2;
 	}
 }
 
